--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "clsx": "^1.2.1",
+    "framer-motion": "^7.5.3",
     "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.0",
