--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.2",
+    "react-use-dimensions": "^1.2.1",
     "redux": "^4.2.0",
     "swiper": "^8.4.4"
   },
